fix: error message if input empty

--- a/calculatorapp/Templates/home.html
+++ b/calculatorapp/Templates/home.html
@@ -3,15 +3,13 @@
     
     <form action="result">
         <input type="number" name="number1" placeholder="Enter first number">
-        <br>
-        <br> 
+
+        <button type="submit" name="add">+</button>
+        <button type="submit" name="subtract">-</button>
+        <button type="submit" name="multiply">*</button>
+        <button type="submit" name="divide">/</button>
+
         <input type="number" name="number2" placeholder="Enter second number">
-        <br>
-        <br>
-        <button type="submit" name="add">Add</button>
-        <button type="submit" name="subtract">Subtract</button>
-        <button type="submit" name="multiply">Multiply</button>
-        <button type="submit" name="divide">Divide</button>
     
     </form>
     </div>
